fix: Add `overflow: hidden` to `visually-hidden` mixin
To handle case with an inner element

--- a/src/mixins/visually-hidden/visually-hidden.scss
+++ b/src/mixins/visually-hidden/visually-hidden.scss
@@ -7,5 +7,6 @@
 	width: 1px;
 	height: 1px;
 	margin: -1px;
+	overflow: hidden;
 	clip: rect(0 0 0 0);
 }
